[package]
name = "tl-codegen"
version = "0.1.0"
authors = ["Matteo Guarda <matteoguarda@tutanota.com>"]
edition = "2018"

[features]
json = ["serde", "serde_json"]

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"
nom = "5.1.2"
regex = "1.3.9"
lazy_static = "1.4.0"

serde = { version = "1.0.115", features = ["derive"], optional = true }
serde_json = { version = "1.0.57", optional = true }

[[bin]]
name = "tl-codegen-gen"
path = "src/main.rs"
required-features = ["json"]
